fix bugs | last commit 30.09.2024

--- a/index.html
+++ b/index.html
@@ -647,41 +647,40 @@
         </div>
     </section>
 
-    <div class="autodesk-widget">
-        <div class="autodesk-widget__layout --hide">
-            <div class="autodesk-widget__header">
-                <span class="header-title">Autodesk Assistant</span>
-                <span data-tooltipe="Minimize" class="ari-block"></span>
-                <span data-tooltipe="Full Screen" class="ari-fullscreen"></span>
-                <span data-tooltipe="Close" class="ari-close"></span>
+    <div class="autodesk-widget --hide">
+        <div class="autodesk-widget__header">
+            <span class="header-title">Autodesk Assistant</span>
+            <span data-tooltipe="Minimize" class="ari-block"></span>
+            <span data-tooltipe="Full Screen" class="ari-fullscreen"></span>
+            <span data-tooltipe="Close" class="ari-close"></span>
+        </div>
+        <div class="autodesk-widget__content">
+            <div class="content__card">Hi, I’m Autodesk Assistant. I can help with product selection, purchasing,
+                and support. If needed, you can also request an agent at any time via the input bar.</div>
+            <div class="content__card">I use AI to recommend solutions. I’m still learning, so please leave feedback
+                to help me improve my answers.</div>
+            <div class="content__card">Please describe your question in detail using complete sentences, and mention
+                product name and version, if applicable.
+                <details class="content-card__bottom">
+                    <summary class="content__example">Show examples</summary>
+                    <p>You can say something like:</p>
+                    <p>What can Revit do?</p>
+                    <p>How do Flex tokens work?</p>
+                    <p>How do I download my AutoCAD trial?</p>
+                    <p>I’m using Maya 2024 and autosave isn't working.</p>
+                    <p>I’m an Architect looking for something to help me model 3D design concepts.</p>
+                </details>
             </div>
-            <div class="autodesk-widget__content">
-                <div class="content__card">Hi, I’m Autodesk Assistant. I can help with product selection, purchasing,
-                    and support. If needed, you can also request an agent at any time via the input bar.</div>
-                <div class="content__card">I use AI to recommend solutions. I’m still learning, so please leave feedback
-                    to help me improve my answers.</div>
-                <div class="content__card">Please describe your question in detail using complete sentences, and mention
-                    product name and version, if applicable.
-                    <details class="content-card__bottom">
-                        <summary class="content__example">Show examples</summary>
-                        <p>You can say something like:</p>
-                        <p>What can Revit do?</p>
-                        <p>How do Flex tokens work?</p>
-                        <p>How do I download my AutoCAD trial?</p>
-                        <p>I’m using Maya 2024 and autosave isn't working.</p>
-                        <p>I’m an Architect looking for something to help me model 3D design concepts.</p>
-                    </details>
-                </div>
 
-                <div class="content__card-user">
-                    <!-- <div class="message-user"></div> -->
-                </div>
+            <div class="content__card-user">
+                <!-- <div class="message-user"></div> -->
             </div>
-            <div class="autodesk-widget__footer">
-                <textarea class="autodesk-widget__input" type="text" placeholder="Describe your question in detail"></textarea>
-                <span class="autodesk-widget__line"></span>
-                <button class="button-send"><span class="ari-send"></span></button>
-            </div>
+        </div>
+        <div class="autodesk-widget__footer">
+            <textarea class="autodesk-widget__input" type="text"
+                placeholder="Describe your question in detail"></textarea>
+            <span class="autodesk-widget__line"></span>
+            <button class="button-send"><span class="ari-send"></span></button>
         </div>
     </div>
 
@@ -697,7 +696,46 @@
         </div>
         <div class="au-assi__container">
             <div class="au-assi__content">
-                <svg viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg"><g data-testid="" filter=""><path data-testid="avatar-path" d="M24 0.5H26C38.9787 0.5 49.5 11.0213 49.5 24V49.5H24C11.0213 49.5 0.5 38.9787 0.5 26V24C0.5 11.0213 11.0213 0.5 24 0.5Z" fill="#000000"></path></g><g clip-path="url(#clip0_2324_116765)"><path d="M28.449 15.0174L11.1676 25.8161C10.5227 26.219 10.3266 27.0684 10.7296 27.7132C11.1325 28.3581 11.9819 28.5542 12.6267 28.1512L29.9082 17.3526C30.553 16.9497 30.7491 16.1003 30.3462 15.4554C29.9432 14.8106 29.0938 14.6145 28.449 15.0174Z" fill="white"></path><path d="M37.3733 14.9483L11.1676 31.3234C10.5227 31.7263 10.3266 32.5757 10.7296 33.2206C11.1325 33.8654 11.9819 34.0615 12.6267 33.6586L38.8324 17.2834C39.4773 16.8805 39.6734 16.0311 39.2704 15.3863C38.8675 14.7414 38.0181 14.5453 37.3733 14.9483Z" fill="white"></path><path d="M36.993 21.0619L19.0636 32.2654C18.4187 32.6683 18.2226 33.5177 18.6256 34.1626C19.0285 34.8074 19.8779 35.0035 20.5227 34.6006L38.4521 23.397C39.097 22.9941 39.2931 22.1447 38.8901 21.4999C38.4872 20.855 37.6378 20.6589 36.993 21.0619Z" fill="url(#paint0_linear_2324_116765)"></path><path d="M36.9886 21.0016L34.2833 22.692C33.6385 23.095 33.4424 23.9444 33.8453 24.5892C34.2482 25.234 35.0976 25.4301 35.7425 25.0272L38.4478 23.3367C39.0927 22.9338 39.2888 22.0844 38.8858 21.4396C38.4829 20.7947 37.6335 20.5986 36.9886 21.0016Z" fill="white"></path><path d="M37.3734 26.2686L27.8419 32.2245C27.1971 32.6275 27.001 33.4768 27.4039 34.1217C27.8068 34.7665 28.6562 34.9626 29.3011 34.5597L38.8326 28.6037C39.4774 28.2008 39.6735 27.3514 39.2705 26.7066C38.8676 26.0617 38.0182 25.8656 37.3734 26.2686Z" fill="white"></path><path d="M36.5338 32.455L36.5338 32.455C35.889 32.8579 35.6929 33.7073 36.0958 34.3522C36.4987 34.997 37.3481 35.1931 37.993 34.7901L37.993 34.7901C38.6378 34.3872 38.8339 33.5378 38.431 32.893C38.028 32.2481 37.1786 32.052 36.5338 32.455Z" fill="white"></path></g><path d="M24 0.5H26C38.9787 0.5 49.5 11.0213 49.5 24V49.5H24C11.0213 49.5 0.5 38.9787 0.5 26V24C0.5 11.0213 11.0213 0.5 24 0.5Z" stroke="white"></path><defs><linearGradient id="paint0_linear_2324_116765" x1="25%" y1="0%" x2="100%" y2="0%" gradientUnits="userSpaceOnUse"><stop offset="0%" stop-color="white" stop-opacity="0"></stop><stop offset="100%" stop-color="white" stop-opacity="1"></stop></linearGradient><clipPath id="clip0_2324_116765"><rect width="30" height="21.5625" fill="white" transform="translate(10 14.2188)"></rect></clipPath></defs></svg>
+                <svg viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g data-testid="" filter="">
+                        <path data-testid="avatar-path"
+                            d="M24 0.5H26C38.9787 0.5 49.5 11.0213 49.5 24V49.5H24C11.0213 49.5 0.5 38.9787 0.5 26V24C0.5 11.0213 11.0213 0.5 24 0.5Z"
+                            fill="#000000"></path>
+                    </g>
+                    <g clip-path="url(#clip0_2324_116765)">
+                        <path
+                            d="M28.449 15.0174L11.1676 25.8161C10.5227 26.219 10.3266 27.0684 10.7296 27.7132C11.1325 28.3581 11.9819 28.5542 12.6267 28.1512L29.9082 17.3526C30.553 16.9497 30.7491 16.1003 30.3462 15.4554C29.9432 14.8106 29.0938 14.6145 28.449 15.0174Z"
+                            fill="white"></path>
+                        <path
+                            d="M37.3733 14.9483L11.1676 31.3234C10.5227 31.7263 10.3266 32.5757 10.7296 33.2206C11.1325 33.8654 11.9819 34.0615 12.6267 33.6586L38.8324 17.2834C39.4773 16.8805 39.6734 16.0311 39.2704 15.3863C38.8675 14.7414 38.0181 14.5453 37.3733 14.9483Z"
+                            fill="white"></path>
+                        <path
+                            d="M36.993 21.0619L19.0636 32.2654C18.4187 32.6683 18.2226 33.5177 18.6256 34.1626C19.0285 34.8074 19.8779 35.0035 20.5227 34.6006L38.4521 23.397C39.097 22.9941 39.2931 22.1447 38.8901 21.4999C38.4872 20.855 37.6378 20.6589 36.993 21.0619Z"
+                            fill="url(#paint0_linear_2324_116765)"></path>
+                        <path
+                            d="M36.9886 21.0016L34.2833 22.692C33.6385 23.095 33.4424 23.9444 33.8453 24.5892C34.2482 25.234 35.0976 25.4301 35.7425 25.0272L38.4478 23.3367C39.0927 22.9338 39.2888 22.0844 38.8858 21.4396C38.4829 20.7947 37.6335 20.5986 36.9886 21.0016Z"
+                            fill="white"></path>
+                        <path
+                            d="M37.3734 26.2686L27.8419 32.2245C27.1971 32.6275 27.001 33.4768 27.4039 34.1217C27.8068 34.7665 28.6562 34.9626 29.3011 34.5597L38.8326 28.6037C39.4774 28.2008 39.6735 27.3514 39.2705 26.7066C38.8676 26.0617 38.0182 25.8656 37.3734 26.2686Z"
+                            fill="white"></path>
+                        <path
+                            d="M36.5338 32.455L36.5338 32.455C35.889 32.8579 35.6929 33.7073 36.0958 34.3522C36.4987 34.997 37.3481 35.1931 37.993 34.7901L37.993 34.7901C38.6378 34.3872 38.8339 33.5378 38.431 32.893C38.028 32.2481 37.1786 32.052 36.5338 32.455Z"
+                            fill="white"></path>
+                    </g>
+                    <path
+                        d="M24 0.5H26C38.9787 0.5 49.5 11.0213 49.5 24V49.5H24C11.0213 49.5 0.5 38.9787 0.5 26V24C0.5 11.0213 11.0213 0.5 24 0.5Z"
+                        stroke="white"></path>
+                    <defs>
+                        <linearGradient id="paint0_linear_2324_116765" x1="25%" y1="0%" x2="100%" y2="0%"
+                            gradientUnits="userSpaceOnUse">
+                            <stop offset="0%" stop-color="white" stop-opacity="0"></stop>
+                            <stop offset="100%" stop-color="white" stop-opacity="1"></stop>
+                        </linearGradient>
+                        <clipPath id="clip0_2324_116765">
+                            <rect width="30" height="21.5625" fill="white" transform="translate(10 14.2188)"></rect>
+                        </clipPath>
+                    </defs>
+                </svg>
             </div>
         </div>
     </div>
