corrected table on page | last commit 01.10.2024

--- a/index.html
+++ b/index.html
@@ -496,79 +496,77 @@
         </section>
     </div>
 
-    <div class="container">
-        <section class="products">
-            <div class="container">
-                <div class="products__top">Compare related products</div>
+    <section class="products">
+        <div class="container">
+            <div class="products__top">Compare related products</div>
 
-                <div class="products__block">
-                    <div class="products__element-first">
-                        <div class="products__item">Modeling toolsets for architecture, stuctare, MEP, and construction
-                        </div>
-                        <div class="products__item">Collabaration</div>
-                        <div class="products__item">Documentation</div>
-                        <div class="products__item">Simulation and analysis</div>
-                        <div class="products__item">Twinmotion for Revit</div>
-                    </div>
-                    <div class="products__element-second">
-                        <div class="products__item"><img src="./image/revit.png" alt="revit">Revit</div>
-                        <div class="products__item">
-                            <div class="products__circle --black"></div>
-                        </div>
-                        <div class="products__item">
-                            <div class="products__circle --black"></div>
-                        </div>
-                        <div class="products__item">
-                            <div class="products__circle --black"></div>
-                        </div>
-                        <div class="products__item">
-                            <div class="products__circle --black"></div>
-                        </div>
-                        <div class="products__item">
-                            <div class="products__circle --black"></div>
-                        </div>
-                    </div>
+            <div class="products__block">
+                <!-- first -->
+                <div class="products__item --bg-none"></div>
+                <div class="products__item"><img src="./image/revit.png" alt="revit">Revit</div>
+                <div class="products__item"><img src="./image/revit.png" alt="revit">Revit LT</div>
+                <!-- second -->
+                <div class="products__item">Modeling toolsets for architecture, stuctare, MEP, and construction
+                </div>
+                <div class="products__item">
+                    <div class="products__circle --black"></div>
+                </div>
+                <div class="products__item">
+                    <div class="products__circle --smoke"></div>
+                </div>
+                <!-- third -->
+                <div class="products__item">Collabaration</div>
+                <div class="products__item">
+                    <div class="products__circle --black"></div>
+                </div>
+                <div class="products__item">
+                    <div class="products__circle --smoke"></div>
+                </div>
+                <!-- Fourth -->
+                <div class="products__item">Documentation</div>
+                <div class="products__item">
+                    <div class="products__circle --black"></div>
+                </div>
+                <div class="products__item">
+                    <div class="products__circle --smoke"></div>
+                </div>
+                <!-- Fifth -->
+                <div class="products__item">Simulation and analysis</div>
+                <div class="products__item">
+                    <div class="products__circle --black"></div>
+                </div>
+                <div class="products__item">
+                    <div class="products__circle --white"></div>
+                </div>
+                <!-- sixth -->
+                <div class="products__item">Twinmotion for Revit</div>
+                <div class="products__item">
+                    <div class="products__circle --black"></div>
+                </div>
+                <div class="products__item">
+                    <div class="products__circle --white"></div>
+                </div>
+            </div>
 
-                    <div class="products__element-third">
-                        <div class="products__item"><img src="./image/revit.png" alt="revit">Revit</div>
-                        <div class="products__item">
-                            <div class="products__circle --smoke"></div>
-                        </div>
-                        <div class="products__item">
-                            <div class="products__circle --smoke"></div>
-                        </div>
-                        <div class="products__item">
-                            <div class="products__circle --smoke"></div>
-                        </div>
-                        <div class="products__item">
-                            <div class="products__circle --white"></div>
-                        </div>
-                        <div class="products__item">
-                            <div class="products__circle --white"></div>
-                        </div>
-                    </div>
+            <div class="products__bottom">
+                <div class="products__button">
+                    <button>View in-depth comparison</button>
                 </div>
 
-                <div class="products__bottom">
-                    <div class="products__button">
-                        <button>View in-depth comparison</button>
+                <div class="products__bottom-right">
+                    <p>Capabilsite</p>
+                    <div class="products__bottom-element">
+                        <div class="products__circle --black"></div>comprehensive
                     </div>
-
-                    <div class="products__bottom-right">
-                        <p>Capabilsite</p>
-                        <div class="products__bottom-element">
-                            <div class="products__circle --black"></div>comprehensive
-                        </div>
-                        <div class="products__bottom-element">
-                            <div class="products__circle --smoke"></div>Unmited
-                        </div>
-                        <div class="products__bottom-element">
-                            <div class="products__circle --white"></div>N/A
-                        </div>
+                    <div class="products__bottom-element">
+                        <div class="products__circle --smoke"></div>Unmited
+                    </div>
+                    <div class="products__bottom-element">
+                        <div class="products__circle --white"></div>N/A
                     </div>
                 </div>
-        </section>
-    </div>
+            </div>
+    </section>
 
     <footer class="footer">
         <div class="container --faq">
