fix index casching file

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
     <section class="ar-imagine">
         <div class="container">
-            <div class="ar-imagine__info">
+            <div class="ar-imagine__col">
                 <div class="ar-imagine__title">if you can imagine it, you can design it in Autodesk Revit</div>
                 <div class="ar-imagine__subtitle">Autodesk Revit allow architects, engineers, and construction
                     professionals to:</div>
@@ -268,7 +268,7 @@
                 </div>
             </div>
 
-            <div class="ar-imagine__card">
+            <div class="ar-imagine__col">
                 <div class="ar-imagine__video" data-video="first"><video
                         src="https://help.autodesk.com/videos/23b423f0-fd85-11ee-a103-9d5647070b99/video.mp4"
                         controls></video></div>
