task complete page resources | last commit 04.10.2024

--- a/index.html
+++ b/index.html
@@ -360,12 +360,60 @@
         </div>
     </section>
 
-    <section class="ari-faq">
+    <section class="resources">
         <div class="container">
-            <div class="ari-faq__list">
-                <details class="ari-faq__item">
-                    <summary class="ari-faq__capt">What is Autodesk software used for?</summary>
-                    <div class="ari-faq__desk">
+            <div class="resources__top">
+                <h2>Autodesk Revit resources</h2>
+                <a href="#"><span class="ari-arrowright"></span> Get learning guides for your Revit trial</a>
+            </div>
+            <div class="resources__cards">
+                <div class="resources__card">
+                    <div class="resources__image"><img src="./image/f1.png" alt="#"></div>
+                    <div class="resources-content">
+                        <div class="resources-content__top">CUSTOMER RESOURCE</div>
+                        <div class="resources-content__title">Customer Value Hub</div>
+                        <div class="resources-content__info">See how Autodesk and the AEC Community work together, sharing ideas that define what’s next for Revit.</div>
+                            <div class="resources-content__line"></div>
+                        <div class="resources-content__bottom">
+                            <a href="#"><span class="ari-arrowright"></span>Visit Customer Value Hub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="resources__card">
+                    <div class="resources__image"><img src="./image/f2.png" alt="#"></div>
+                    <div class="resources-content">
+                        <div class="resources-content__top">PRODUCT NEWS</div>
+                        <div class="resources-content__title">See what’s new in Autodesk Revit 2025</div>
+                        <div class="resources-content__info">Read about Total Carbon Analysis, enhancements to site
+                            design, and more in the latest release.</div>
+                            <div class="resources-content__line"></div>
+                        <div class="resources-content__bottom">
+                            <a href="#"><span class="ari-arrowright"></span>Read the Revit blog</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="resources__card">
+                    <div class="resources__image"><img src="./image/f3.png" alt="#"></div>
+                    <div class="resources-content">
+                        <div class="resources-content__top">PRODUCT ROAD MAP</div>
+                        <div class="resources-content__title">See what’s next for Autodesk Revit</div>
+                        <div class="resources-content__info">See what’s in the product development pipeline with a live
+                            look at the Revit public roadmap.</div>
+                            <div class="resources-content__line"></div>
+                        <div class="resources-content__bottom">
+                            <a href="#"><span class="ari-arrowright"></span>Visit the Revit roadmap</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <section class="faq">
+        <div class="container">
+            <div class="faq__list">
+                <details class="faq__item">
+                    <summary class="faq__capt">What is Autodesk software used for?</summary>
+                    <div class="faq__desk">
                         <p>Autodesk's broad portfolio of products and services enables our customers to foster
                             innovation,
                             optimize and improve their designs, save time and money, improve quality, communicate
@@ -396,9 +444,9 @@
                         </p>
                     </div>
                 </details>
-                <details class="ari-faq__item">
-                    <summary class="ari-faq__capt">What is the difference between AutoCAD and Autodesk?</summary>
-                    <div class="ari-faq__desk">
+                <details class="faq__item">
+                    <summary class="faq__capt">What is the difference between AutoCAD and Autodesk?</summary>
+                    <div class="faq__desk">
                         <p>Autodesk is the company that makes software for people who make things. AutoCAD is one of
                             the
                         </p>
@@ -407,40 +455,40 @@
                         professionals rely on to create precise 2D and 3D drawings..
                     </div>
                 </details>
-                <details class="ari-faq__item">
-                    <summary class="ari-faq__capt">How can I convert my Autodesk software trial to a paid
+                <details class="faq__item">
+                    <summary class="faq__capt">How can I convert my Autodesk software trial to a paid
                         subscription?
                     </summary>
-                    <div class="ari-faq__desk">
+                    <div class="faq__desk">
                         Launch your trial, click the <b>SUBSCRIBE NOW</b> button, and follow the necessary steps to
                         purchase your subscription. Once your purchase is complete, simply relaunch the product to
                         have
                         immediate access to your subscription. No need to download or install the product again. For
                         additional help, visit the <br>
-                        <a class="ari-faq__link" href="#">Autodesk Knowledge Network.</a>
+                        <a class="faq__link" href="#">Autodesk Knowledge Network.</a>
                     </div>
                 </details>
-                <details class="ari-faq__item">
-                    <summary class="ari-faq__capt">Can I switch to subscription from a maintenance plan?</summary>
-                    <div class="ari-faq__desk">
+                <details class="faq__item">
+                    <summary class="faq__capt">Can I switch to subscription from a maintenance plan?</summary>
+                    <div class="faq__desk">
                         Yes. To help customers transition to a named user plan, new trade-in offers will be
                         available
                         starting May2020.
-                        <a class="ari-faq__link" href="#">Learn more about our trade-in offers</a>
+                        <a class="faq__link" href="#">Learn more about our trade-in offers</a>
                     </div>
                 </details>
-                <details class="ari-faq__item">
-                    <summary class="ari-faq__capt">How do I renew my license?</summary>
-                    <div class="ari-faq__desk">
+                <details class="faq__item">
+                    <summary class="faq__capt">How do I renew my license?</summary>
+                    <div class="faq__desk">
                         Software renewal varies depending on how you purchased your subscription. For detailed
                         renewal
                         instructions, visit
-                        <a class="ari-faq__link" href="#">How to renew your subscription</a>
+                        <a class="faq__link" href="#">How to renew your subscription</a>
                     </div>
                 </details>
-                <details class="ari-faq__item">
-                    <summary class="ari-faq__capt">Where can I buy Autodesk software?</summary>
-                    <div class="ari-faq__desk">
+                <details class="faq__item">
+                    <summary class="faq__capt">Where can I buy Autodesk software?</summary>
+                    <div class="faq__desk">
                         <p>We’re glad you asked!</p>
 
                         <p>Your fastest option is to subscribe to any of our most popular Autodesk products directly
@@ -449,29 +497,29 @@
 
                         <p>Talk to a sales representative by calling 1-844-664-8618.</p>
 
-                        <p>Find an <a class="ari-faq__link" href="#">authorized reseller</a>.</p>
+                        <p>Find an <a class="faq__link" href="#">authorized reseller</a>.</p>
                     </div>
                 </details>
-                <details class="ari-faq__item">
-                    <summary class="ari-faq__capt">Can I install Autodesk software on multiple computers?</summary>
-                    <div class="ari-faq__desk">
+                <details class="faq__item">
+                    <summary class="faq__capt">Can I install Autodesk software on multiple computers?</summary>
+                    <div class="faq__desk">
                         Your subscription software can be installed on up to three devices. However, only the named
                         user
                         can sign in and use that software on a single computer at any given time. Please refer to
                         the
-                        <a class="ari-faq__link" href="#">Terms of Use</a> for more information.
+                        <a class="faq__link" href="#">Terms of Use</a> for more information.
                     </div>
                 </details>
-                <details class="ari-faq__item">
-                    <summary class="ari-faq__capt">Can I buy Autodesk software without a subscription?</summary>
-                    <div class="ari-faq__desk">
-                        Autodesk software is only available as a subscription. Learn more about the <a
-                            class="ari-faq__link" href="#">benefits of subscription</a>.
+                <details class="faq__item">
+                    <summary class="faq__capt">Can I buy Autodesk software without a subscription?</summary>
+                    <div class="faq__desk">
+                        Autodesk software is only available as a subscription. Learn more about the <a class="faq__link"
+                            href="#">benefits of subscription</a>.
                     </div>
                 </details>
-                <details class="ari-faq__item">
-                    <summary class="ari-faq__capt">Who uses Autodesk software?</summary>
-                    <div class="ari-faq__desk">
+                <details class="faq__item">
+                    <summary class="faq__capt">Who uses Autodesk software?</summary>
+                    <div class="faq__desk">
                         Autodesk is a global leader in design and make software for the architecture, engineering,
                         construction, media and entertainment, and manufacturing industries. If you’ve ever driven a
                         high-performance car, admired a towering skyscraper, used a smartphone, or watched a great
@@ -480,12 +528,12 @@
                         software.
                     </div>
                 </details>
-                <details class="ari-faq__item">
-                    <summary class="ari-faq__capt">What happened to perpetual licenses?</summary>
-                    <div class="ari-faq__desk">
+                <details class="faq__item">
+                    <summary class="faq__capt">What happened to perpetual licenses?</summary>
+                    <div class="faq__desk">
                         As of August 1, 2016, we have phased out perpetual licenses of our software for Autodesk
-                        products worldwide. Take advantage of subscription benefits by purchasing <a
-                            class="ari-faq__link" href="#">here</a>.
+                        products worldwide. Take advantage of subscription benefits by purchasing <a class="faq__link"
+                            href="#">here</a>.
                     </div>
                 </details>
             </div>
